Completed baseline goal

--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>List Project</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <h1>Enter a thing to a list!<h1>
+    <section>
+      <div class="special">
+        <form id="thingForm">
+          <p>
+            <label for="thing">Thing to list:</label>
+            <input type="text" name="thing">
+          </p>
+          <p>
+            <button type="submit">List it!</button>
+          </p>
+        </form>
+      </div>
+      <div id="details">
+      </div>
+    </section>
+    <script src="index.js"></script>
   </body>
 </html>
